--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,279 +1,157 @@
-@import url(https://fonts.googleapis.com/css?family=Lato);
-@import url("../font-awesome-4.7.0/css/font-awesome.min.css");
-
-*{
-  padding: 0px;
-  margin: 0px;
-}
-
-header {
-  background-color: black;
-  height: 100px;
-  width: 100%;
-  position: relative;
-  margin-bottom: 15px;
-}
-
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 body {
+  font-family: 'Lobster', cursive;
   background-image: url("../images/sample-pattern.png");
-  height: 100%;
 }
 
-#logo{
-  float: left;
-  margin-left: 20px;
-  margin-top: 30px;
-}
-
-nav{
-  float: right;
-  margin-right: 20px;
-  margin-top: 30px;
-}
-
-nav li{
-  list-style: none;
-  display: inline-block;
-  padding-right: 30px;
-}
-
-nav li a{
-  color: #fff;
-  text-decoration: none;
-}
-
-#content-title{
-  height: 100px;
-  width: 100%;
+header{
+  background-color: rgba(91, 46, 46, 5);
+  padding: 50px;
+  font-size: 40px;
   text-align: center;
-  margin-top: 20px;
-}
-
-#article-list{
-  background-color: rgba(255, 0, 0, 0.2);
-  width: 700px;
-  height: 30%;
-  margin: 0px auto 0 auto;
-  position: relative;
-  padding-top: 50px;
-  padding-bottom: : 50px;
-  margin-bottom: 71px;
-  margin-top: 100px;
-}
-
-#article-list-contact{
-  background-color: rgba(255, 0, 0, 0.2);
-  width: 300px;
-  height: 20%;
-  margin: 0px auto 0 auto;
-  position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 160px;
-  margin-bottom: 109px;
-}
-
-h1 {
-  color: #FFF;
-  font-family: Lato;
-  font-size: 50px;
-  font-weight: 400;
-  line-height: 60px;
-  margin: 0;
-  font-weight: 100;
-}
-
-h2 {
-  color: black;
-  font-family: Lato;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 60px;
-  margin: 0;
-  font-weight: 100;
-  text-align:center;
-}
-
-h3 {
-  color: rgba(38, 38, 38, 0.8);
-  font-family: Lato;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  margin: 10px 5px;
-  text-align: left;
-}
-#article-list-contact h3{
-  text-align: center;
-}
-
-#article-list-contact p{
-  color: #FFF;
-}
-
-h5 {
-  color: #FFF;
-  font-family: Lato;
-  font-size: 16px;
-  font-weight: 300;
-}
-
-a{
-  text-decoration: none;
-  font-family: Lato;
-  color: #FFF;
-}
-
-p {
-  color: black;
-  font-family: Lato;
-  font-size: 13px;
-  font-weight: 100;
-  line-height: 24px;
-  margin: 0 auto;
-  width: 95%;
 }
 
 footer{
-  background-color: black;
+  background-color: rgba(91, 46, 46, 5);
   height: 100px;
-  width: 100%;
-  position: absolute;
-  margin-top: 50px;
+  display: block;
+  margin-top: 10px;  
 }
 
 #left{
   float: left;
-  margin-left: 20px;
-  margin-top: 50px;
+  font-size: 15px;
+  margin: 20px;
 }
 
 #right{
   float: right;
-  margin-right: 20px;
+  font-size: 15px;
+  margin: 20px;
 }
 
-#right a{
-  color: #FFF;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+  margin-bottom: 10px;
 }
 
-.social-icon {
-    color: #fff;
+li {
+  float: left;
 }
-ul.social-icons {
-    margin-top: 10px;
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  text-decoration: none;
 }
-.social-icons li {
-    vertical-align: top;
-    display: inline;
-    height: 100px;
+
+li a:hover {
+  background-color: #111111;
 }
-.social-icons a {
-    color: #fff;
-    text-decoration: none;
-}
+
 .fa-facebook {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
+  padding:10px 14px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
 }
 .fa-facebook:hover {
-    background-color: #3d5b99;
+  background-color: #3d5b99;
 }
 .fa-twitter {
-    padding:10px 12px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
+  padding:10px 12px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
 }
 .fa-twitter:hover {
-    background-color: #00aced;
+  background-color: #00aced;
+}
+.fa-rss {
+  padding:10px 14px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
+}
+.fa-rss:hover {
+  background-color: #eb8231;
+}
+.fa-youtube {
+  padding:10px 14px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
+}
+.fa-youtube:hover {
+  background-color: #e64a41;
 }
 .fa-linkedin {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
+  padding:10px 14px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
 }
 .fa-linkedin:hover {
-    background-color: #0073a4;
+  background-color: #0073a4;
 }
 .fa-google-plus {
-    padding:10px 9px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
+  padding:10px 9px;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition: .5s;
+  background-color: #322f30;
 }
 .fa-google-plus:hover {
-    background-color: #e25714;
+  background-color: #e25714;
 }
 
-.fa-envelope {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
-}
-.fa-envelope:hover {
-    background-color: #3d5b99;
-}
-
-.fa-phone {
-    padding:10px 14px;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition: .5s;
-    background-color: #322f30;
-}
-.fa-phone:hover {
-    background-color: #3d5b99;
-}
-
-#foto{
+#article{
   background-color: rgba(255, 0, 0, 0.2);
-  width: 500px;
-  height: 51%;
-  margin: 0px auto 0 auto;
-  position: absolute;
-  padding-top: 30px;
-  padding-left: 10px;
-  margin-left: 10px;
-}
-
-#about{
-  right: -150;
-  background-color: rgba(255, 0, 0, 0.2);
-  width: 450px;
-  height: 85%;
-  margin: 0px auto 0 auto;
-  position: absolute;
-  padding-top: 20px;
-  padding-left: 20px;
-  margin-left: 10px;
-}
-
-.content{
-  width: 700px;
-  height: 70%;
+  width: 550px;
+  height: 150px;
   margin: 0px auto 0 auto;
   position: relative;
-  padding-top: 50px;
+  padding: 5px;
+  display: block; 
+}
+
+#article1{
+  background-color: rgba(255, 0, 0, 0.2);
+  width: 550px;
+  margin: 0px auto 0 auto;
+  position: relative;
+  padding: 5px;
+  display: none; 
+}
+
+#article2{
+  background-color: rgba(255, 0, 0, 0.2);
+  width: 550px;
+  margin: 0px auto 0 auto;
+  position: relative;
+  padding: 5px;
+  display: none; 
 }
